# quay-service-tool

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README  README.md  SPAM_DETECTION_IMPLEMENTATION_PLAN.md  app.py  build_deploy.sh  clean.sh  dev_rosa_deployment.yml  docker-compose.yml  openshift-rosa.yml  openshift.yml  package-lock.json  pr_check.sh  renovate.json
.github/workflows/: backend-unit.yml  frontend-e2e.yml  frontend-unit.yml
.tekton/: quay-service-tool-pull-request.yaml  quay-service-tool-push.yaml
backend/: Dockerfile  _init.py  app.py  pyproject.toml  requirements.txt  spam_detection_cli.py  utils.py
backend/config/: config.yaml
backend/spam_detection/: __init__.py  classifier.py  database.py  quay_db.py  remediation.py  scanner.py  store.py  training_import.py
backend/tasks/: banner.py  federateduser.py  org_owner.py  robot_token.py  spam.py  spam_detection.py  user.py  username.py
backend/templates/: index.html
backend/tests/: test_keycloak_auth.py  test_protected_namespace.py
backend/tests/spam_detection/: conftest.py  test_classifier.py  test_live_quay_db_remediation.py  test_scanner_remediation.py  test_tasks.py
backend/tests/tasks/: test_user.py
conf/: entrypoint.sh  generate_supervisord_conf.sh  supervisord.conf  supervisord.conf.example
frontend/: .env  .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  stylePaths.js  webpack.dev.js
frontend/__mocks__/: react-markdown.js
frontend/e2e/: account-numbers.spec.ts  smoke.spec.ts  spam-detection.spec.ts
frontend/src/: index.html  index.tsx  typings.d.ts
frontend/src/app/: app.css  app.test.tsx  index.tsx  routes.tsx
frontend/src/app/AppLayout/: AppLayout.tsx
frontend/src/app/ExportCompliance/: ExportCompliance.tsx
frontend/src/app/Login/: Login.tsx
frontend/src/app/SiteUtils/: SiteUtils.test.tsx  SiteUtils.tsx
frontend/src/app/SpamDetection/: SpamDetection.css  SpamDetection.test.tsx  SpamDetection.tsx
frontend/src/app/Support/: Support.tsx
frontend/src/services/: HttpService.tsx  UserService.tsx
frontend/stories/: Dashboard.stories.tsx
scripts/: install-demo-classifier.js  spam-demo-browser.js  spam-ingress-local-demo.sh
tasks/: banner.py  username.py
(+19 files in other folders)
