[project]
name = ""
version = "0.0.1"
requires-python = "==3.12.*"
dependencies = [
    "quay @ git+https://github.com/quay/quay.git@89667d1be39cd216f5b8e28595c2eec089992d9c",
    "python-keycloak>=4.0.0",
    "prometheus-flask-exporter==0.23.1",
    "psycopg2-binary>=2.9.10",
    "supervisor==4.3.0",
    "gunicorn>=23.0.0",
    "gevent>=24.0.0",
    "python-redis-lock>=4.0.0",
]

[tool.uv]
package = false
override-dependencies = [
    "svglib==1.5.1", # this is needed otherwise Quay will try to install pycairo which doesn't work in Ubi
    "pyjwt>=2.12.0",
    "jwcrypto>=1.5.7",
    "supervisor==4.3.0",
    "prometheus-client>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
