[project]
name = "quay-service-tool"
version = "0.0.1"
requires-python = "==3.14.*"
dependencies = [
    "quay @ git+https://github.com/quay/quay.git@8b7f0d36749eca82f41c9ff1bd7fb50985b9cb2a",
    "python-keycloak>=4.0.0",
    "prometheus-flask-exporter==0.23.1",
    "psycopg2-binary>=2.9.10",
    "supervisor==4.3.0",
    "gunicorn>=23.0.0",
    "gevent>=24.0.0",
    "python-redis-lock>=4.0.0",
]

[tool.uv]
package = false
override-dependencies = [
    "svglib==1.5.1", # this is needed otherwise Quay will try to install pycairo which doesn't work in Ubi
    "pyjwt>=2.12.0",
    "jwcrypto>=1.5.7",
    "supervisor==4.3.0",
    "prometheus-client>=0.13.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
